# Advertising_Mailing

./: .env  README  data.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  scheduler.py  services.py  urls.py  views.py
mailing/management/commands/: start_mailing.py
mailing/migrations/: 0001_initial.py  0002_mailing_user.py  0002_remove_mailing_mail_mail_mailing_and_more.py  0003_alter_mailing_options_mailing_is_active.py  0003_mailing_number_clients.py  0004_remove_mailing_last_dispatch_and_more.py  0005_alter_mail_mailing.py  0006_alter_mailing_first_dispatch_and_more.py
mailing/templates/mailing/: base.html  conf_create_mailing.html  home.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
mailing/templates/mailing/includes/: inc_footer.html  inc_main_menu.html
user/: forms.py  models.py  urls.py  views.py
user/management/commands/: csu.py
user/migrations/: 0001_initial.py  0002_user_is_block.py  0003_alter_user_options.py
user/templates/user/: email_confirmation_failed.html  email_confirmation_sent.html  email_confirmed.html  login.html  password_confirmation_failed.html  password_confirmed.html  password_reset.html  register.html  user_form.html  user_list.html
user/templates/user/email/: new_password_mail.html
